test/expected/using_ai.out
using SI = auto int
           ^
12: error: "auto" not allowed in type definition
